Append creates linked image textures if object has shape keys #48971

Closed
opened 2016-07-29 13:55:46 +02:00 by Alex · 7 comments

System Information
Intel Core 2 Quad, 8 Gb RAM, NVidia GeForce GTX 960 2GB
Windows 7 x64

Blender Version
Broken: 2.77 e0c7aaf
Worked: 2.77a abf6f08

Short description of error
Appending creates linked image textures if object has shape keys. After saving and reloading linked image textures remain linked and not appended.

Exact steps for others to reproduce the error

  1. Open Blender, select default Cube and add a shape key to it.
  2. Go to Properties -> Texture and replace Cube's default generated texture with some image texture. Embedding image texture doesn't seem to make any difference.
  3. Save file for further appending.
  4. Create new file and do File -> Append -> [File from step 3] -> Object -> Cube.
  5. Reselect appended Cube and go to Properties -> Texture

You can use my test file for appending - just open Blender and append my Cube instead of the default one. In 2.77a Cube's image texture will be appended while in latest build it will be linked.Append_Test1.blend

  • In 2.77a image texture will be appended just as expected.
  • In latest build image texture will appear linked rather than appended and this link won't disappear after reloading so image texture will remain linked.

Edit: this problem doesn't seem to appear in build 51b274a so this is most likely a fairly recent change. Build 51b274a also doesn't show linked duplicates of textures, materials and meshes after appending.

**System Information** Intel Core 2 Quad, 8 Gb RAM, NVidia GeForce GTX 960 2GB Windows 7 x64 **Blender Version** Broken: 2.77 e0c7aaf Worked: 2.77a abf6f08 **Short description of error** Appending creates linked image textures if object has shape keys. After saving and reloading linked image textures remain linked and not appended. **Exact steps for others to reproduce the error** 1. Open Blender, select default Cube and add a shape key to it. 2. Go to Properties -> Texture and replace Cube's default generated texture with some image texture. Embedding image texture doesn't seem to make any difference. 3. Save file for further appending. 4. Create new file and do File -> Append -> [File from step 3] -> Object -> Cube. 5. Reselect appended Cube and go to Properties -> Texture You can use my test file for appending - just open Blender and append my Cube instead of the default one. In 2.77a Cube's image texture will be appended while in latest build it will be linked.[Append_Test1.blend](https://archive.blender.org/developer/F329558/Append_Test1.blend) - In 2.77a image texture will be appended just as expected. - In latest build image texture will appear linked rather than appended and this link won't disappear after reloading so image texture will remain linked. **Edit:** this problem doesn't seem to appear in build 51b274a so this is most likely a fairly recent change. Build 51b274a also doesn't show linked duplicates of textures, materials and meshes after appending.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey
Bastien Montagne was assigned by Sergey Sharybin 2016-07-29 14:38:42 +02:00

@mont29, one for your desk? :)

@mont29, one for your desk? :)

Actually, it’s not only textures, it’s mesh as well - you keep the two versions, localized one and linked one, of the mesh (and hence all its dependencies, including materials, textures, etc.). Most likely yet another stupid issue with those faked-datablocks of shapekeys :(

Actually, it’s not only textures, it’s mesh as well - you keep the two versions, localized one and linked one, of the mesh (and hence all its dependencies, including materials, textures, etc.). Most likely yet another stupid issue with those faked-datablocks of shapekeys :(

This issue was referenced by cdc7a24d7b

This issue was referenced by cdc7a24d7b56aed874aefe4d37c6acb1cfcae346

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48971
No description provided.